// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Switch Switch basic props 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal block"
          data-amis-name="switch"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  开关
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-SwitchControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Switch is-checked"
              data-role="switch"
            >
              <input
                checked=""
                theme="cxd"
                type="checkbox"
              />
              <span
                class="text"
              >
                已开启飞行模式
              </span>
              <span
                class="slider"
              />
            </label>
            <span
              class="cxd-Switch-option"
            >
              switch
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:Switch Switch size 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="switch"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  开关
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-SwitchControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Switch  cxd-Switch--sm"
              data-role="switch"
            >
              <input
                theme="cxd"
                type="checkbox"
              />
              <span
                class="text"
              />
              <span
                class="slider"
              />
            </label>
            <span
              class="cxd-Switch-option"
            />
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
